--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <input
           type="text"
           id="guess"
-          placeholder="Please write a number ⌨✏"
+          placeholder="Please write a number ⌨✏✏"
         />
-        <button id="check">Is Your Number Perfect ❓</button>
+        <button id="check">Check the Number ✔ </button>
       </div>
       <div class="reversed">
         <p id="answer"></p>
